# gamestage

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/gamestage/: IClient.h  IFramework.h  IInputManager.h  IServer.h  IVideo.h  api.h  api_loaders.h
include/gamestage/Video/: Sprite.h  Texture.h
modules/: CMakeLists.txt
modules/gamestage_gl/: CMakeLists.txt
modules/gamestage_gl/include/gamestage/Video/: Video_GL.h  static.h
modules/gamestage_gl/include/glad/: glad.h
modules/gamestage_gl/src/: Video_GL.cpp  glad.c
modules/gamestage_sdl/: CMakeLists.txt
modules/gamestage_sdl/include/gamestage/: Framework_SDL.h  InputManager_SDL.h  static.h
modules/gamestage_sdl/src/: Framework_SDL.cpp
src/: api_loaders.cpp  main.cpp
tools/carpenter/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  carpenter.csproj  carpenter.sln
